# cody

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec.md
.codex/agents/: p4-matcher-planner.md
.codex/rules/: team-sdd-memory.mdc
.codex/skills/: README.md
.cursor/agents/: clicky-brand-director.md  (+3 more)
.specstory/: .project.json  statistics.json
contracts/: __init__.py  interfaces.py  schemas.md  schemas.py
data/: README.md  __init__.py  ph_pretrain.py
design/: HANDOFF_TROY.md  QA.md  README.md  decisions.tsv
docs/: p4-matcher-plan.md  p4-matcher-prd.md
extractor/: README.md  __init__.py  extract.py
fixtures/: README.md  __init__.py  extracted_content.json  file_records.json  load.py  query_intents.json
indexer/: README.md  __init__.py  index_folder.py
landing/: index.html  main.js  styles.css
matcher/: README.md  __init__.py  api.py  config.py  golden_cases.json  local_model.example.json  match.py  parse.py  prompt.py  run_golden.py  smoke.py  types.py
nlu/: README.md  __init__.py  parse_query.py
orchestration/: README.md  __init__.py  composition.py  controller.py  demo_stubs.py  main.py  pipeline.py  reveal_animation.py  window.py
overlay/: README.md  __init__.py  __main__.py  app.py  auth.py  brain.py  cursor.py  cursor_window.py  find_target.py  float_app.py  grid.py  hotkey.py  html_host.py  icon_bounds.py  input_router.py  lens_app.py  listen.py  ocr_scan.py  ocr_targets.py  pointer_resolve.py  query_parse.py  refine.py  scene.py  screenshot.py  stt.py  tk_app.py  tk_lens.py
overlay-stretch/: README.md  __init__.py
reveal/: README.md  __init__.py  reveal.py
scripts/: build_cody_exe.ps1  run_cody_html_lens.ps1  run_overlay_admin.bat  run_overlay_admin.ps1
voice/: .gitignore  CONTEXT.md  README.md  __init__.py  __main__.py  config.example.json  config.py  listen.py  openvoice_engine.py  session.py  speak.py
webste test/: ORCHESTRATION.md  PARENT_EXPORT.md  README.md  decisions.tsv
(+139 files in other folders)
