# Install: python -m venv .venv ; .venv/Scripts/pip install -e .
# Windows OneDrive MAX_PATH: pip install PySide6-Essentials (instead of full PySide6).

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cody"
version = "0.1.0"
description = "Cody — AI that shows you where a file is"
requires-python = ">=3.12"
dependencies = [
    "PySide6",
    "pytest",
    "pytest-qt",
    "pypdf",
    "datasets",
]

[project.optional-dependencies]
overlay = [
    "uiautomation>=2.0.18",
    "pyinstaller>=6.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "pywebview>=5.0",
    "SpeechRecognition>=3.10",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "openai>=1.40",
    "mss>=9.0",
]

[project.scripts]
cody-overlay = "overlay.tk_lens:main"

[tool.setuptools.packages.find]
include = [
    "contracts*",
    "fixtures*",
    "orchestration*",
    "indexer*",
    "extractor*",
    "nlu*",
    "matcher*",
    "data*",
    "reveal*",
    "voice*",
    "overlay*",
]

[tool.pytest.ini_options]
testpaths = ["tests", "overlay/tests"]
pythonpath = ["."]
addopts = "-q"
